--- a/src/detection/target_ekf/config/camera.yaml
+++ b/src/detection/target_ekf/config/camera.yaml
@@ -5,8 +5,10 @@ cam_height: 480
 # cam_cx: 322.83899
 # cam_cy: 234.54992
 
-cam_fx: 277.191356
-cam_fy: 277.191356
+# cam_fx: 277.191356
+# cam_fy: 277.191356
+cam_fx: 554.382713
+cam_fy: 554.382713
 cam_cx: 320.5
 cam_cy: 240.5
 
@@ -30,7 +32,7 @@ cam2body_R_down: [ 0.0, -1.0,  0.0,
                   -1.0,  0.0,  0.0,
                     0.0,  0.0, -1.0]
                     
-cam2body_p_down: [0.06 ,-0.01 ,-0.03]
+cam2body_p_down: [-0.06 ,-0.01 ,-0.03]
 
 # 使用朝下的向量乘上原始机体转相机
 cam2body_R_front: [ 0 ,-0.865927 , 0.500171,
