--- a/src/vis_utils/CMakeLists.txt
+++ b/src/vis_utils/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(traj_opt)
+project(vis_utils)
 
 add_compile_options(-std=c++14)
 set(CMAKE_BUILD_TYPE "Release")
@@ -8,28 +8,19 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall")
 find_package(Eigen3 REQUIRED)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
-  vis_utils
+  pcl_ros
+  pcl_conversions
+  nav_msgs
+  visualization_msgs
 )
 
 catkin_package(
   INCLUDE_DIRS include ${EIGEN3_INCLUDE_DIR}
-  LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS roscpp
+  CATKIN_DEPENDS roscpp pcl_ros visualization_msgs pcl_conversions nav_msgs
   DEPENDS EIGEN3
 )
 
 include_directories(
   include
-  ${EIGEN3_INCLUDE_DIR}
   ${catkin_INCLUDE_DIRS}
-)
-
-add_library(${PROJECT_NAME}
-  src/${PROJECT_NAME}.cc
-  src/${PROJECT_NAME}_fake.cc
-  src/${PROJECT_NAME}_perching.cc
-)
-
-target_link_libraries(${PROJECT_NAME}
-  ${catkin_LIBRARIES}
 )
